# model-context-protocol

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
mcp-basic/mcp-server/: README.md  calculator.py
mcp-server-airbnb/: README.md  app.py
mcp-server-calculator/: README.md  calculator.py
mcp-server-notes/: README.md  notes.py  notes.txt
mcp-server-notes/notes_data/: model-context-protocol-mcp.txt
mcp-server-pokemon/: README.md  example-pokemon-api-response.json  pokemon.py  test_pokemon.py
mcp-use/: README.md  browser_mcp.py
mcp-youtube-transcript/: README.md  youtube_transcript.py
streamlit-mcp/: .env.example  README.md  app.py  article_summary.md  client.py  server.py
