[project]
name = "model-context-protocol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "gradio>=5.23.3",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "langchain-ollama>=0.3.2",
    "mcp-use>=1.2.7",
    "mcp[cli]>=1.6.0",
    "multidict!=6.3.1",
    "ollama>=0.4.7",
    "praisonaiagents[llm]>=0.0.72",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
    "youtube-transcript-api>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]


